2011-01-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17156: htmlArea RTE: Disable Cell merge button in FF when less than two cells are selected

2011-01-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16045: htmlArea RTE: Merging table cells using context menu doesn't work in Firefox

2011-01-17  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17066: Wrong PHPDoc comment for t3lib_div::writeFileToTypo3tempDir

2011-01-16  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17069: Scheduler: Refresh icon has disappeared

2011-01-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17036: Misleading deprecation comment getReferenceHTML()

2011-01-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17036: Misleading deprecation comment getReferenceHTML()
	* Fixed bug #16967: [Caching framework] Remove not existing "GlobalsBackend" from config_default.php

2011-01-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15133: Rendering images with ImageMagick fails to set file permissions (Thanks to Alexander Grein)

2011-01-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13695: Image output in frontend is not xhtml valid
	* Fixed bug #5896: Inserting a divider (<hr>) in the RTE breaks XHTML validation (and other things)

2011-01-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16904: htmlArea RTE: Trailing slash stripped from href of autolinks
	* Fixed bug #16750: htmlArea RTE: Popup layer for editing links is not resizeable in IE

2011-01-06  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16030: Page tree root node lacks white-space: nowrap
	* Fixed bug #16828: missing XCLASS statement in t3lib/class.t3lib_compressor.php

2011-01-05  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16900: [Cache] Filebackend fails on windows

2011-01-04  Jeff Segars  <jeff@webempoweredchurch.org>
