@@ -1,3 +1,7 @@
+2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked
+
 2011-01-19  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #17156: htmlArea RTE: Disable Cell merge button in FF when less than two cells are selected
